# scopelint-dev

./: Cargo.toml  DEV.md
.github/workflows/: release-v2.yml
src/: main.rs
src/check/: mod.rs  utils.rs
src/check/validators/: error_prefix.rs  mod.rs
tests/: check.rs  spec.rs
tests/check-proj1-AllFindings/src/: Counter.sol
