[package]
  categories = ["development-tools"]
  description = "An opinionated formatting and linting tool for foundry projects"
  edition = "2021"
  include = ["/src"]
  keywords = ["foundry", "linting", "formatting"]
  license = "MIT"
  name = "dev-scopelint"
  readme = "README.md"
  repository = "https://github.com/thelostone-mc/scopelint-dev"
  homepage = "https://github.com/thelostone-mc/scopelint-dev"
  version = "1.0.0"

[dependencies]
  clap = { version = "4.4.2", features = ["derive"] }
  colored = "2.0.0"
  globset = "0.4"
  itertools = "0.11.0"
  regex = "1.6.0"
  solang-parser = "0.3.2"
  taplo = "0.13.0"
  toml = "0.8"
  walkdir = "2.3.2"